[project]
name = "employeerecuiteragent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-groq>=1.1.0",
    "langgraph>=1.0.4",
    "langgraph-checkpoint-mongodb>=0.3.0",
    "pdfminer-six>=20251107",
    "rq>=2.6.1",
    "uvicorn>=0.38.0",
]
